--- a/dev-data/templates/passwordResetTemplate.pug
+++ b/dev-data/templates/passwordResetTemplate.pug
@@ -287,8 +287,8 @@ html
                             td
                               // CONTENT
                               p Hi #{firstName},
-                              p Welcome to Natours, we're glad to have you 🎉🙏
-                              p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+                              p Forgot your password? Submit a PATCH request with your new password and passwordConfirm to: #{url}.\nIf you did'nt forget your password, please ignore this email!
+                              p (Website for this action not yet implemented)
                               table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
                                 tbody
                                   tr
@@ -297,7 +297,7 @@ html
                                         tbody
                                           tr
                                             td
-                                              a(href=`${url}`, target='_blank') Upload user photo
+                                              a(href=`${url}`, target='_blank') Reset your password
                               p If you need any help with booking your next tour, please don't hesitate to contact me!
                               p - Jonas Schmedtmann, CEO
 
